--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0;
-  background-color: rgb(7, 44, 54);
+  background-color: rgb(31, 75, 79);
 }
 
 .normal-container {
@@ -22,7 +22,7 @@ body {
 .modal-full {
   position: absolute;
   z-index: 2;
-  background-color: rgba(49, 62, 49, 0.463);
+  background-color: rgba(120, 120, 120, 0.281);
   height: 100vh;
   width: 100vw;
   display: none;
@@ -44,7 +44,7 @@ justify-content: space-between;
   padding: 25px;
   width: 80vw;
   width: 450px;
-  background-color: rgb(86, 118, 108);
+  background-color: rgb(16, 82, 94);
   box-shadow: 0 0 10px;
   border-radius: 10px;
   
@@ -95,8 +95,8 @@ justify-content: space-between;
 .add-task-btn-modal {
   padding: 20px;
   font-size: 2rem;
-  background-color: rgb(7, 85, 61);
-  border: 5px solid rgb(26, 27, 26);
+  background-color: rgb(2, 58, 58);
+  border: 2px solid rgb(26, 27, 26);
   color: white;
   font-weight: bold;
   align-self: center;
@@ -128,15 +128,15 @@ justify-content: space-between;
 
 .for-modal-btn {
   padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 0 5px rgba(8, 186, 130, 0.468);
-  background-color: rgb(11, 48, 63);
+  border-radius: 30px;
+  box-shadow: 0 0 1px rgba(24, 103, 78, 0.468);
+  background-color: rgba(4, 43, 45, 0.582);
   color: white;
   font-weight: bold;
   font-size: 1.5rem;
   margin-bottom: 20px;
   cursor: pointer;
-  border: solid black 2px;
+  border: none;
 }
 .for-modal-btn:hover {
   background-color: rgb(20, 33, 29);
@@ -147,7 +147,7 @@ justify-content: space-between;
   margin-top: 20px;
   margin-left: 20%;
   margin-right: 20%;
-  background-color: rgb(8, 51, 56);
+  background-color: rgba(28, 46, 48, 0.55);
   color: white;
   border-radius: 10px;
   width: 90vw;
