--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0;
-  background-color: rgb(22, 146, 123);
+  background-color: rgb(20, 138, 103);
 }
 
 .normal-container {
@@ -144,16 +144,16 @@ justify-content: space-between;
 
 
 .task-div {
-  margin-top: 20px;
   margin-left: 20%;
   margin-right: 20%;
-  background-color: rgba(13, 68, 69, 0.934);
+  background-color: rgba(30, 32, 32, 0.76);
   color: white;
   border-radius: 10px;
   width: 90vw;
   padding: 20px;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 20px;
 }
 .task-name {
   font-size: 1.5rem;
@@ -165,34 +165,55 @@ justify-content: space-between;
   padding-top: 5px;
   margin-right: 10px;
 }
-.tick-dlt-task {
+.tick-edit-dlt-task {
   display: flex;
   align-self: center;
   font-weight: bold;
   font-size: 1.5rem;
-  margin-right: 20px;
+  margin-right: 5px;
   margin-left: 20px;
 }
 .tick-task-btn {
   background-color: green;
   padding: 5px 10px;
   border-radius: 5px;
-  margin-right: 20px;
+  margin-right: 10px;
+  border: none;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.edit-task-btn {
+  background-color: rgb(201, 187, 34);
+  padding: 5px 10px;
+  border-radius: 5px;
+  margin-right: 10px;
+  border: none;
+  color: white;
+  font-size: 15px;
+  font-weight: bold;
+}
+.edit-task-btn:hover {
+  cursor: pointer;
+  background-color: rgb(151, 151, 3);
 }
 
 .lined-task {
   text-decoration:line-through;
-  color: chartreuse;
+  color: rgb(120, 120, 120);
   text-decoration-thickness: 2px;
-  text-decoration-color: green;
-  text-decoration-style: double;
-
+  text-decoration-color: rgb(95, 95, 95);
 }
 
 .dlt-task-btn {
   padding: 5px 10px;
   background-color: red;
   border-radius: 5px;
+  border: none;
+  color: white;
+  font-size: 25px;
+  font-weight: bold;
 }
 .tick-task-btn:hover {
  cursor: pointer;
