--- a/index.css
+++ b/index.css
@@ -2,22 +2,56 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0;
-  background-color: rgb(20, 138, 103);
   font-family: sans-serif;
+  height: 100vh;
+  width: 100vw;
+  background: linear-gradient(to bottom right,rgb(32, 92, 86),rgb(24, 122, 96),rgb(24, 122, 68),rgb(21, 109, 68), rgb(24, 122, 68), rgb(21, 109, 59), rgba(32, 92, 86, 0.995)) ;
 }
 
 .normal-container {
   position: absolute;
-  
+  /* background:palegoldenrod; */
+
+  /* backgr  width: 95vw;ound: radial-gradient(circle, red, green); */
   display: flex;
+  margin: 5px 10% 10% 5%;
   flex-direction: column;
   align-items: center;
   flex-grow: unset;
   z-index: 1;
-  width: 95vw;
-  margin: 20px;
+  
   
 }
+.top {
+  display: flex;
+  align-items: center;
+}
+.heading {
+  font-family: cursive;
+  color: rgb(36, 31, 36);
+  text-align: center;
+  font-size: 70px;
+  margin-right: 30px;
+  margin: 20px 40px;
+}
+
+.for-modal-btn {
+  padding: 5px 30px 10px 30px;
+  height: fit-content;
+  border-radius: 10px;
+  box-shadow: 0 0 1px rgba(24, 103, 78, 0.468);
+  background-color: rgb(5, 36, 33);
+  color: white;
+  font-weight: bolder;
+  font-size: 2rem;
+  margin-bottom: 20px;
+  cursor: pointer;
+  border: none;
+}
+.for-modal-btn:hover {
+  background-color: rgb(2, 46, 46);
+}
+
 
 
 .modal-full {
@@ -93,9 +127,16 @@ justify-content: space-between;
   margin-left: 8px;
   height: 3rem;
 }
-.description-txt-display {
-  padding: 10px 5px 5px 0px;
+.description-txt-window {
+  padding: 10px 15px 5px 15px;
   color: rgb(230, 230, 230);
+  overflow-wrap: break-word;
+  line-height: 1.5rem;
+  display: none;
+}
+
+.description-txt-window-display {
+  display:block;
 }
 .add-task-btn-modal {
   padding: 20px;
@@ -155,52 +196,54 @@ justify-content: space-between;
 
 
 
-.for-modal-btn {
-  padding: 20px;
-  border-radius: 30px;
-  box-shadow: 0 0 1px rgba(24, 103, 78, 0.468);
-  background-color: rgba(4, 43, 45, 0.582);
-  color: white;
-  font-weight: bold;
-  font-size: 1.5rem;
-  margin-bottom: 20px;
-  cursor: pointer;
-  border: none;
-}
-.for-modal-btn:hover {
-  background-color: rgb(20, 33, 29);
-}
+
 
 
 .task-div {
   margin-left: 20%;
   margin-right: 20%;
-  background-color: rgba(30, 32, 32, 0.76);
-  color: white;
+  background: rgb(23, 22, 22);
+  color: rgb(227, 235, 227);
   border-radius: 10px;
   width: 90vw;
-  padding: 20px;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
+  padding: 0px;
+  margin-bottom: 10px;
+}
+
+.task-detail {
+  margin: 0%;
+  /* padding: 10px; */
 }
 .task-name {
   font-size: 1.5rem;
+  padding: 15px;
   font-weight: bold;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.task-name:hover {
+background-color: rgba(4, 51, 54, 0.79);
 }
 .time-date {
   font-size: medium;
   color: rgb(201, 163, 92);
   padding-top: 5px;
-  margin-right: 10px;
+  margin: 10px 15px;
+  
+  display: none;
+}
+
+.time-date-display {
+  display: block;
 }
 .tick-edit-dlt-task {
   display: flex;
   align-self: center;
   font-weight: bold;
   font-size: 1.5rem;
-  margin-right: 5px;
-  margin-left: 20px;
+  padding: 20px 20px 20px 20px;
+  float: right;
 }
 .tick-task-btn {
   background-color: green;
